[package]
name = "dm-dss-replayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.4"
futures-util = "0.3.30"
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tap = "1.0.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-tungstenite = "0.21.0"
