[package]
name = "dm-dss-replayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
once_cell = "1.19.0"
rand = "0.8.5"
tap = "1.0.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net", "time"] }
